--- a/dist.ini
+++ b/dist.ini
@@ -11,10 +11,10 @@ version = 0.002
 [@Git]
 
 [Prereqs]
-perl = 5
-Mojolicious = 0
+perl = 5.010            ; for the state keyword
+Mojolicious = 2.63      ; this is when Mojo::IOLoop got a ->reactor
 Net::DNS::Native = 0.15
-List::Util = 1.45
+List::Util = 1.45       ; for uniq
 
 [GitHub::Meta]
 [NextRelease]
