dist.ini, .perlcritic.rc: Add Perl::Critic author testing

--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,14 @@ copyright_year   = 2017
 
 version = 0.002
 
+; authordep Perl::Critic::Freenode
+
 [CheckChangesHasContent]
 [PkgVersion]
 [PodWeaver]
 [@Starter]
+GatherDir.include_dotfiles = 1
+PruneCruft.except = .perlcritic.rc
 [@Git]
 
 [Prereqs]
@@ -20,3 +24,5 @@ List::Util = 1.45       ; for uniq
 
 [GitHub::Meta]
 [NextRelease]
+[Test::Perl::Critic]
+critic_config = .perlcritic.rc
