dist.ini: add Test::More 0.88 as TestRequires prereq

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,9 @@ Mojolicious = 2.63      ; this is when Mojo::IOLoop got a ->reactor
 Net::DNS::Native = 0.15
 List::Util = 1.45       ; for uniq
 
+[Prereqs / TestRequires]
+Test::More = 0.88
+
 [GitHub::Meta]
 [NextRelease]
 [Test::Perl::Critic]
