dist.ini: Replace Test::Perl::Critic plugin with Test::Perl::Critic::Freenode

--- a/dist.ini
+++ b/dist.ini
@@ -6,14 +6,10 @@ copyright_year   = 2017
 
 version = 0.002
 
-; authordep Perl::Critic::Freenode
-
 [CheckChangesHasContent]
 [PkgVersion]
 [PodWeaver]
 [@Starter]
-GatherDir.include_dotfiles = 1
-PruneCruft.except = .perlcritic.rc
 [@Git]
 
 [Prereqs]
@@ -27,5 +23,4 @@ Test::More = 0.88
 
 [GitHub::Meta]
 [NextRelease]
-[Test::Perl::Critic]
-critic_config = .perlcritic.rc
+[Test::Perl::Critic::Freenode]
